# RESPAN

./: .gitignore  2D_Unet_Training_and_Predict_Spine_2023_v3 - Loader.ipynb  LICENSE  Model Training Script.ipynb  README.md  SpinePipe.bat  environment.yml  pyproject.toml  test_sync.txt
RESPAN/: Environment.py  __init__.py
RESPAN/Elastix_params/: bspline_params.txt  rigid_params.txt
RESPAN/ImageAnalysis/: DaskImageAnalysis.py  IO.py  ImageAnalysis.py  MemProfiler.py  ModelTraining.py  Segmentation_and_Restoration.py  SpineTracking.py  Tables.py  Validation.py  zarr to tiff.py
RESPAN/ImageJ_Macros/: 1_Labels_to_Channels_for_Annotation.ijm  2_Channels_to_Labels_for_Training.ijm  Tif_Batch_2024.ijm
RESPAN/Main/: Main.py  Timer.py  __init__.py
RESPAN/Scripts/: CAREparametersGUI.pkl  Dice Score Calculator.py  RESPAN_Batch.py  RESPAN_GUI.py  RESPAN_GUI_DIST.py  SelfNet_Inference.py  SelfNet_Model_Training.py  SelfNetparametersGUI.pkl  clean_launcher.py  nnUNETparametersGUI.pkl  parametersanalysisGUI.pkl  parametesrvalGUI.pkl
RESPAN/Templates/: Analysis_Settings.yaml
spineanalysis/: Environment.py
spineanalysis/ImageAnalysis/: ImageAnalysis.py
spineanalysis/Main/: Main.py  __init__.py
spinepipe/: Environment.py  __init__.py  gui.py
spinepipe/ImageAnalysis/: ImageAnalysis.py  SpineTracking.py  Validation.py
spinepipe/Main/: Main.py  Timer.py
spinepipe/Scripts/: Care_Processing.py  SpinePipe_Batch_v1.py  SpinePipe_GUI_For_DISTv1.py  SpinePipe_GUI_v1.py  SpinePipe_GUI_v2-dual.py  SpinePipe_GUI_v2_dual.py  SpinePipe_Validation_GUI_v1.py  gt_dir.pickle  (+8 more)
(+1 files in other folders)
