[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spinepipe"
version = "0.9.81"
dependencies = [
]
requires-python = ">=3.9"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
  "Programming Language :: Python"
]


[project.gui-scripts]
spinepipe-gui = "spinepipe.gui:main"